--- a/.config
+++ b/.config
@@ -84,3 +84,4 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-noddos=y
